--- a/helloworld.csproj
+++ b/helloworld.csproj
@@ -11,9 +11,10 @@
       <None Update="library.dll">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
-    </ItemGroup>
-    <ItemGroup>
       <None Update="liblibrary.dylib">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="liblibrary.so">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
     </ItemGroup>
