--- a/nuget.config
+++ b/nuget.config
@@ -4,5 +4,6 @@
         <clear />
         <add key="nuget" value="https://api.nuget.org/v3/index.json" />
         <add key="lithiumtoast" value="https://www.myget.org/F/lithiumtoast/api/v3/index.json" />
+        <add key="dotnet-experimental" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-experimental/nuget/v3/index.json" />
     </packageSources>
 </configuration>
